# ntfy-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude-desktop-config.json  codex-config.toml  env.example  mcp-client-smoke.py
src/ntfy_mcp/: __init__.py  config.py  models.py  ntfy_client.py  server.py  validators.py
tests/: test_config.py  test_ntfy_client.py  test_server_tool.py  test_validators.py
