[project]
name = "ntfy-mcp"
version = "0.1.0"
description = "Secure local MCP server for sending allow-listed ntfy notifications."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ntfy-mcp contributors" }
]
keywords = ["mcp", "ntfy", "notifications", "agents", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.9.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/MahdiHedhli/ntfy-mcp"
Repository = "https://github.com/MahdiHedhli/ntfy-mcp"
Issues = "https://github.com/MahdiHedhli/ntfy-mcp/issues"

[project.scripts]
ntfy-mcp = "ntfy_mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ntfy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
